--- a/inst/www/styles.css
+++ b/inst/www/styles.css
@@ -73,3 +73,20 @@ skin-blue .left-side, .skin-blue .main-sidebar, .skin-blue .wrapper {
 .row {
   padding: 5px 15px 5px 15px;
 }
+
+.sidebar-mini.sidebar-collapse .content-wrapper {
+  margin-left: 0px !important;
+}
+
+/* Hide as much of the title as we can */
+.sidebar-mini.sidebar-collapse .main-header .logo {
+  width: 0px;
+}
+.sidebar-mini.sidebar-collapse .main-header .navbar {
+  margin-left: 0px;
+}
+
+html, body {
+  width:100%;
+  height:100%
+}
